# statustxt

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/cpu/: main.rs  mod.rs
src/memory/: mod.rs
src/power/: mod.rs
