[package]
name = "statustxt"
version = "0.1.0"
authors = ["Ned Pummeroy <nedpummeroy@gmail.com>"]

[features]
default = []
power = []

[dependencies]
time = "0.1"

[dependencies.x11]
version = "1.1.1"
git = "https://github.com/Daggerbot/x11-rs"
features = ["xlib"]

[lib]
name = "statustxt"
path = "src/lib.rs"

[profile.release]
lto=true
